# lambda-q

./: .gitignore  CHANGELOG.md  README.md  lambda-q.cabal
app/: Main.hs
src/Language/: Check.hs  Eval.hs  Parser.hs  Syntax.hs  Types.hs
src/Runtime/: Env.hs  Filesystem.hs
