cabal-version:      2.4
name:               lambda-q
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christoffer Lind Andersen
maintainer:         57995582+Chri692u@users.noreply.github.com
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Language.Syntax, Language.Parser Language.Types, Language.Check, Language.Eval,
                       Runtime.Env, Runtime.Filesystem
  build-depends:       base, mtl, containers, directory, filepath, text, megaparsec, parser-combinators   
  default-language:    Haskell2010

executable lambda-q
    main-is:          Main.hs
    build-depends:    base, lambda-q, directory, filepath, text, megaparsec
    hs-source-dirs:   app
    default-language: Haskell2010